Updated slideshow with Day1 Material

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <title>Welcome</title>
+  <style>
+    body > div{
+      border-left:1px solid #ddd;
+      margin:2em;
+      line-height:1.5em;
+      font-size:.8em;
+      padding:2em;
+    }
+
+  </style>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
-  Hi there!
+
+  <div>
+    <h2>Day 1</h2>
+
+    <h3>Objectives</h3>
+    <ul>
+      <li>Set up your environment</li>
+      <li>Assign Research Topics</li>
+      <li>Deliverables</li>
+    </ul>
+
+
+
+
+    <div>
+      <h3>Setting up your environment</h3>
+
+
+      <h4>IDE Setup</h4>
+      <ul>
+        <li>Eclipse</li>
+        <li>IntelliJ</li>
+      </ul>
+      <ol>
+        <li>Checkout the Code</li>
+        <li>Set up Gradle</li>
+
+      </ol>
+
+      <h4>
+        Get server from Git
+      </h4>
+      <ol>
+        <li>Fork on Github</li>
+        <li>Checkout your Fork</li>
+        <li>Switch Branch</li>
+        <li>Run gradle build</li>
+        <li>Run EmbeddedServer</li>
+
+
+      </ol>
+
+      <h4>How everything works together</h4>
+      <ul>
+        <li>Version Control</li>
+        <li>Editor</li>
+        <li>Build System</li>
+        <li>Server</li>
+      </ul>
+
+    </div>
+
+
+    <div>
+      <h3>Research Topics</h3>
+      <h4>Suggested Topics</h4>
+      <ul>
+        <li>Frameworks</li>
+        <li>Continuous Integration and Deployment</li>
+        <li>Testing (Functional, Integration, Unit, A/B)</li>
+        <li>Optimization and Scalability</li>
+        <li>Usability and Design</li>
+        <li>Anything else you want</li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Deliverables</h3>
+      <h4>What to finish</h4>
+      <ul>
+        <li>Have your environment setup</li>
+        <li>Create a slideshow </li>
+      </ul>
+      <h4>What to read</h4>
+      <ul>
+        <li>Client - Server and HTTP</li>
+        <li>jQuery + RequireJS</li>
+        <li>Google University HTML/CSS/JavaScript Videos</li>
+      </ul>
+    </div>
+
+
+  </div>
+
 </body>
 </html>
