Added client server

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -144,6 +144,7 @@
     <ul>
       <li>Review Environment Setup + Slideshow</li>
       <li>Assign Research Topics</li>
+      <li>Client - Server and HTTP</li>
       <li>jQuery + RequireJS</li>
       <li>Deliverables</li>
       <li>Reading Material</li>
@@ -168,6 +169,16 @@
         <li>Usability and Design</li>
       </ul>
       <p><em>Volunteers welcomed to present first!</em></p>
+    </div>
+    <div>
+      <h3>Client- Server and HTTP</h3>
+      <ul>
+        <li>What is a Client and Server</li>
+        <li>Links + Forms</li>
+        <li>Images and External Scripts</li>
+        <li>Absolute vs Relative Pathing</li>
+        <li>GET/POST/Put/Delete</li>
+      </ul>
     </div>
     <div>
       <h3>jQuery + RequireJS</h3>
