--- a/src/main/webapp/data/training-slides.html
+++ b/src/main/webapp/data/training-slides.html
@@ -1,4 +1,4 @@
-<div class="sldata-slide-ides">
+<div class="slides">
   <div data-slide-id="Day 1">
     <h2>Day 1</h2>
 
@@ -16,16 +16,15 @@
       <h3>Setting up your environment</h3>
 
 
-      <h4>data-slide-idE Setup</h4>
+      <h4>IDE Setup</h4>
       <ul>
         <li>Eclipse</li>
         <li>IntelliJ</li>
-      </ul>
-      <ol>
+
         <li>Checkout the Code</li>
         <li>Set up Gradle</li>
 
-      </ol>
+      </ul>
 
       <h4>
         Get server from Git
@@ -69,13 +68,13 @@
       <h4>What to finish</h4>
       <ul>
         <li>Have your environment setup</li>
-        <li>Create a sldata-slide-ideshow </li>
+        <li>Create a slideshow </li>
       </ul>
       <h4>What to read</h4>
       <ul>
         <li>Client - Server and HTTP</li>
         <li>jQuery + RequireJS</li>
-        <li>Google University HTML/CSS/JavaScript Vdata-slide-ideos</li>
+        <li>Google University HTML/CSS/JavaScript Videos</li>
       </ul>
     </div>
 
@@ -86,7 +85,7 @@
     <h2>Day 2</h2>
     <h3>Objectives</h3>
     <ul>
-      <li>Review Environment Setup + Sldata-slide-ideshow</li>
+      <li>Review Environment Setup + Slideshow</li>
       <li>Assign Research Topics</li>
       <li>Client - Server and HTTP</li>
       <li>jQuery + RequireJS</li>
@@ -94,7 +93,7 @@
       <li>Reading Material</li>
     </ul>
     <div>
-      <h3>Review Environment Setup + Sldata-slide-ideshow</h3>
+      <h3>Review Environment Setup + Slideshow</h3>
       <ul>
         <li>Environment Setup</li>
         <li>Semantic HTML</li>
@@ -121,7 +120,7 @@
         <li>Links + Forms</li>
         <li>Images and External Scripts</li>
         <li>Absolute vs Relative Pathing</li>
-        <li>GET/POST/Put/Delete</li>
+        <li>GET/POST/PUT/DELETE</li>
       </ul>
     </div>
     <div>
@@ -142,13 +141,13 @@
       <h3>Deliverables</h3>
       <ul>
         <li>
-          Sldata-slide-ideshow Style Using Classes
+          Slideshow Style Using Classes
         </li>
         <li>
           External Stylesheets
         </li>
         <li>
-          No usage of HTML data-slide-ids
+          No usage of HTML ids
         </li>
       </ul>
     </div>
@@ -157,8 +156,8 @@
       <ul>
         <li>LESS and SASS</li>
         <li>Bootstrap 3.0</li>
-        <li>Responsive Design + Grdata-slide-id Systems</li>
-        <li>Google University JavaScript Vdata-slide-ideo</li>
+        <li>Responsive Design + Grid Systems</li>
+        <li>Google University JavaScript Video</li>
       </ul>
     </div>
     <div>
@@ -166,7 +165,7 @@
 
       Embedded Server in Eclipse is not shutting off the server
 
-      Write assignment for enhanced and default sldata-slide-ideshow in the community
+      Write assignment for enhanced and default slideshow in the community
 
 
 
@@ -176,26 +175,26 @@
   <div data-slide-id="Day 3">
     <h2>Overview</h2>
     <ul>
-      <li>Review Sldata-slide-ideshows</li>
-      <li>Basic CSS, Bootstrap 3.0, Responsive Design, Grdata-slide-id Systems</li>
+      <li>Review Slideshows</li>
+      <li>Basic CSS, Bootstrap 3.0, Responsive Design, Grid Systems</li>
       <li>Deliverables</li>
       <li>Reading Material</li>
     </ul>
     <div>
-      <h3>Review Sldata-slide-ideshows</h3>
+      <h3>Review Slideshows</h3>
       <ul>
         <li>External Stylesheets</li>
-        <li>Using Classes vs data-slide-ids</li>
+        <li>Using Classes vs ids</li>
       </ul>
     </div>
     <div>
-      <h3>Basic CSS, Bootstrap 3.0, Responsive Design, Grdata-slide-id Systems</h3>
+      <h3>Basic CSS, Bootstrap 3.0, Responsive Design, Grid Systems</h3>
       <ul>
         <li>CSS Selector Specificity</li>
         <li>CSS Right to Left Reading</li>
         <li>Bootstrap 3.0 and Semantic Markup</li>
         <li>Responsive Design</li>
-        <li>Grdata-slide-id Systems</li>
+        <li>Grid Systems</li>
         <li>Glyphicons</li>
       </ul>
     </div>
@@ -203,7 +202,7 @@
       <h3>Deliverables</h3>
       <ul>
         <li>Move "content" from your Index page. Content should live in another directory, as a mock database.</li>
-        <li>Create another "page view" of an enhanced sldata-slide-ideshow which has a region for additional components or plugins</li>
+        <li>Create another "page view" of an enhanced slideshow which has a region for additional components or plugins</li>
         <li>Create a JS Controller</li>
         <li>Load content into your application asynchronously (This can be either via config or mock query)</li>
         <li>All JavaScript should use AMD via RequireJS</li>
@@ -241,8 +240,8 @@
   <div data-slide-id="Day 5">
     <h3>Deliverables</h3>
     <ul>
-      <li>Deploy Sldata-slide-ideshow on AppEngine</li>
-      <li>RESTful Service for Sldata-slide-ides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
+      <li>Deploy Slideshow on AppEngine</li>
+      <li>RESTful Service for Slides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
       <li>Ensure your design is responsive (mobile first!)</li>
       <li>Convert all CSS to SASS/SCSS</li>
     </ul>
