updated slideshow to day 4

--- a/src/main/webapp/data/training-slides.html
+++ b/src/main/webapp/data/training-slides.html
@@ -80,7 +80,6 @@
 
 
   </div>
-
   <div data-slide-id="Day 2">
     <h2>Day 2</h2>
     <h3>Objectives</h3>
@@ -173,6 +172,7 @@
   </div>
 
   <div data-slide-id="Day 3">
+    <h2>Day 3</h2>
     <h2>Overview</h2>
     <ul>
       <li>Review Slideshows</li>
@@ -220,10 +220,61 @@
   </div>
 
   <div data-slide-id="Day 4">
+    <h2>Day 4</h2>
+    <h3>Overview</h3>
+    <ul>
+      <li>Review Slidshows</li>
+      <li>Review "this", call + apply, prototype inheritance, OOJS</li>
+      <li>Discussion on MVC and MVVM</li>
+      <li>Backbone JS</li>
+      <li>Discussion of Underscore, Handlebar, Closure Templates</li>
+    </ul>
+    <h3>Review Slideshows</h3>
+    <ul>
+      <li>Review Alternate View for Slideshows</li>
+      <li>Review JS Controllers and App Bootstrapping</li>
+      <li>Review AMD Modules</li>
+    </ul>
+    <h3>Review "this", call + apply, prototype inheritance, OOJS</h3>
+    <ul>
+      <li>Questions?</li>
+      <li>this,call,apply - context, scope</li>
+      <li>prototype inheritance</li>
+      <li>What is OOJS</li>
+    </ul>
+    <h3>Discussion of MVC, MVVM, MVP, MV*</h3>
+    <ul>
+      <li>Why use one of these patterns at all?</li>
+      <li>Separation of concerns</li>
+      <li>Why no love for a controller?</li>
+    </ul>
+    <h3>Backbone JS (MVP)</h3>
+    <ul>
+      <li>Questions?</li>
+      <li>Model</li>
+      <li>View</li>
+      <li>Collection</li>
+      <li>Router</li>
+    </ul>
+    <h3>Discussion of Underscore, Handlebar, Closure Templates</h3>
+    <ul>
+      <li>Questions</li>
+      <li>Preferences</li>
+      <li>Compare + Contrast</li>
+    </ul>
+    <h3>Deliverables</h3>
+    <ul>
+      <li>Deploy Slideshow onto AppEngine (You can use the eclipse plugin)</li>
+      <li>Ensure your design is responsive (mobile first!)</li>
+      <li>Convert all CSS to SASS/SCSS</li>
+    </ul>
+  </div>
+  <div data-slide-id="Day 5">
+    <h2>Day 5</h2>
     <div>
       <h3>Deliverables</h3>
       <ul>
-        <li>Split your Content Data from HTML Presentation</li>
+        <li>Make your external datasource JSON (there can be HTML in JSON fields)</li>
         <li>Create Backbone Views and Backbone Models/Collections</li>
       </ul>
     </div>
@@ -231,20 +282,12 @@
       <h3>Reading Material</h3>
       <ul>
         <li>Dojo JS</li>
+        <li>RESTful Service for Slides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
         <li>Infrastructure as a Service, Software as a Service, Platform as a Service</li>
-        <li>Heroku</li>
         <li>Google App Engine</li>
       </ul>
     </div>
   </div>
-  <div data-slide-id="Day 5">
-    <h3>Deliverables</h3>
-    <ul>
-      <li>Deploy Slideshow on AppEngine</li>
-      <li>RESTful Service for Slides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
-      <li>Ensure your design is responsive (mobile first!)</li>
-      <li>Convert all CSS to SASS/SCSS</li>
-    </ul>
-  </div>
+
 </div>
 
