updated reading material

--- a/src/main/webapp/data/training-slides.html
+++ b/src/main/webapp/data/training-slides.html
@@ -268,6 +268,11 @@
       <li>Ensure your design is responsive (mobile first!)</li>
       <li>Convert all CSS to SASS/SCSS</li>
     </ul>
+    <h3>Reading Material</h3>
+    <ul>
+      <li>App Engine</li>
+      <li>Infrastructure as a Service, Software as a Service, Platform as a Service</li>
+    </ul>
   </div>
   <div data-slide-id="Day 5">
     <h2>Day 5</h2>
@@ -276,15 +281,13 @@
       <ul>
         <li>Make your external datasource JSON (there can be HTML in JSON fields)</li>
         <li>Create Backbone Views and Backbone Models/Collections</li>
+        <li>RESTful Service for Slides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
       </ul>
     </div>
     <div>
       <h3>Reading Material</h3>
       <ul>
         <li>Dojo JS</li>
-        <li>RESTful Service for Slides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
-        <li>Infrastructure as a Service, Software as a Service, Platform as a Service</li>
-        <li>Google App Engine</li>
       </ul>
     </div>
   </div>
