updated for review day 5

--- a/src/main/webapp/data/training-slides.html
+++ b/src/main/webapp/data/training-slides.html
@@ -276,18 +276,20 @@
   </div>
   <div data-slide-id="Day 5">
     <h2>Day 5</h2>
+    <h3>Overview - Review Day</h3>
+    <ul>
+      <li>Deploy Slideshow onto AppEngine (You can use the eclipse plugin)</li>
+      <li>Ensure your design is responsive (mobile first!)</li>
+      <li>Convert all CSS to SASS/SCSS</li>
+      <li>App Engine</li>
+      <li>Infrastructure as a Service, Software as a Service, Platform as a Service</li>
+    </ul>
     <div>
       <h3>Deliverables</h3>
       <ul>
         <li>Make your external datasource JSON (there can be HTML in JSON fields)</li>
         <li>Create Backbone Views and Backbone Models/Collections</li>
         <li>RESTful Service for Slides (http://blog.sortedset.com/googles-app-engine-java/google-app-engine-jax-rs-jersey/)</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Reading Material</h3>
-      <ul>
-        <li>Dojo JS</li>
       </ul>
     </div>
   </div>
